# humanoid-sim

./: .gitignore  Dockerfile  GUIDE.md  README.md  RUNNING_LOCAL.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_monitor_local.sh  start_sim.sh
src/astribot_description/: CMakeLists.txt  fetch_urdf.sh  package.xml
src/astribot_description/launch/: display.launch.py
src/astribot_description/meshes/s1_arm/: base.glb  link1.glb  link2.glb  link3.glb  link4.glb  link5.glb  link6.glb  link7.glb
src/astribot_description/meshes/s1_gripper/: base.glb  link1.glb  link2.glb  pad.glb
src/astribot_description/meshes/s1_head/: base.glb  link1.glb
src/astribot_description/meshes/s1_torso/: link1.glb  link3.glb
src/astribot_description/urdf/: astribot_s1_base.urdf  astribot_sensors.urdf.xacro
src/g1_apps/: package.xml  setup.cfg  setup.py
src/g1_apps/g1_apps/: joint_commander.py  sensor_monitor.py
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/launch/: display.launch.py
src/g1_description/rviz/: g1_display.rviz
src/g1_description/urdf/: g1_sensors.urdf.xacro
src/g1_gazebo/: CMakeLists.txt  package.xml
src/g1_gazebo/launch/: g1_sim.launch.py
src/g1_gazebo/worlds/: g1_world.world
src/robot_control/: README.md  pyproject.toml  robot_monitor.py  run.sh
src/sim_gazebo/: CMakeLists.txt  package.xml
src/sim_gazebo/launch/: sim.launch.py
