<?xml version="1.0"?>
<package format="3">
  <name>astribot_description</name>
  <version>0.1.0</version>
  <description>Astribot S1 URDF, meshes, sensor XACRO and RViz2 launch</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
