<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_apps</name>
  <version>0.1.0</version>
  <description>
    Robot programs for the Unitree G1 simulation.
    Works in Gazebo simulation (use_sim_time=true) and on the real robot
    via the unitree_ros2 bridge (use_sim_time=false).
    Add your own nodes by creating new .py files and registering them in setup.py.
  </description>
  <maintainer email="user@example.com">Developer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
